--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "debounce": "^1.0.0",
     "deep-equal": "^1.0.1",
     "emoji": "^0.3.2",
+    "jsonfile": "^2.2.3",
     "lastfm": "^0.9.2",
     "md5-file": "^2.0.4",
     "numeral": "^1.5.3",
@@ -136,7 +137,8 @@
     "request": "^2.67.0",
     "request-promise": "^1.0.2",
     "rieussec": "^0.3.0",
-    "twitter-stream-api": "^0.4.1"
+    "twitter-stream-api": "^0.4.1",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "electron-prebuilt": "~0.35.0"
